2007-02-25  Marc Singer  <elf@cerise.buici.com>

	* src/drivers/drv-nor-cfi.c (nor_read): Fixed the nor-cfi driver
	cache support.  It wasn't properly purging cache entries so the
	write and erase code was failing.  Now, we invalidate entries for
	the area we've read.  We still see the significant improvement in
	read throughput.

	* src/arch-arm/entry/mmu.c: Added comment about how it is the
	called who must purge the cache on marking a block uncacheable.
	This also removes a bit of code that did nothing.

	* src/mach-ixp42x/initialize-sdram.c (cmd_initialize_sdram): SDRAM
	initialization code for the ixp42x so that we can initialize SDRAM
	even though we're not the primary boot loader.  It *looks* OK, but
	I haven't been able to test it with multi-chip slugs.
 
2007-02-15  Marc Singer  <elf@cerise.buici.com>

	* src/drivers/drv-nand.c: Revised the NAND flash initialization
	code to allow for better/more flexible detection of NAND chip
	organizations.  Without a comprehensive directory of chip IDs,
	we're looking for an easy way represent the ID->organization
	mapping.

2007-02-14  Marc Singer  <elf@cerise.buici.com>

	* Makefile (SUBLEVEL): 1.4.16.  Rev for fat-slug support.

	* src/drivers/drv-mem.c (memory_scan): Fixed error in memory scan
	that wasn't accoounting for the last block in a region.  This
	probably would never have been a problem, but was noticed while
	testing the memscan function.
	(cmd_memscan): New command that scans a region of memory as if
	we're scanning memory when APEX starts.  This is useful when
	debugging memory initialization issues.
	(cmd_memscan): Added -u switch to memscan so that we can update
	the memory map passed to the kernel after APEX has made it's pass
	at initialization time.

2007-02-13  Marc Singer  <elf@cerise.buici.com>

	* src/drivers/drv-nor-cfi.c: Added Spansion command support to the
	nor-cfi driver.  This is a configuration time option.  Only one
	command set/protocol may be selected at a time.
