@@ -93,8 +93,6 @@ int cmd_fill (int argc, const char** argv)
     if (step)
       step += 10;
 
-//    printf ("%s: writing\n", __FUNCTION__);
-
     for (; cb > 0; cb -= width) {
       size_t cbWrote;
       SPINNER_STEP;
